[package]
name = "demo"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bevy = "0.15.0"
bevy-tnua = { path = ".." }
bevy-tnua-avian3d = { path = "../avian3d" }
bevy-tnua-physics-integration-layer = { path = "../physics-integration-layer" }
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
